<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout style="@style/df_title">
	        <Button android:id="@+id/btnBack" 
	            android:text="@string/strToSetting" 
	            style="@style/df_title_left_button" />
	        <TextView android:id="@+id/titleText" 
	            android:background="@null" 
	            android:text="" 
	            android:visibility="invisible" 
	            style="@style/df_title_text" />
	        <Button android:visibility="invisible"
	            android:id="@+id/btnOK"
	            android:text="@string/strOK" 
	            style="@style/df_title_right_button" />
    </RelativeLayout>
    
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/mayablue"
        android:gravity="center"
        android:text="@string/fsdevinfo_introduction"/>
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/fsdevinfo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/strfsDevInfo_name"/>
        
        <TextView android:id="@+id/fsdevinfo_name_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:layout_marginLeft="20dp"
            android:text="@string/device_unknown"/>
    </LinearLayout>
    
        <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/fsdevinfo_mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/strfsDevInfo_mac"/>
        
        <TextView android:id="@+id/fsdevinfo_mac_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/device_unknown"/>
    </LinearLayout>
</LinearLayout>
