<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout android:id="@+id/title_id" style="@style/df_title">
	        <Button android:id="@+id/btnBack" 
	            android:visibility="invisible"
	            android:text="@string/strToHome"
	            style="@style/df_title_left_button" />
	        <TextView android:id="@+id/titleText" 
	            android:background="@null" 
	            android:text="@string/home_title04" 
	            style="@style/df_title_text" />
	        <Button android:visibility="invisible"
	            android:id="@+id/btnOK"
	            android:text="@string/strOK" 
	            style="@style/df_title_right_button" />
    </RelativeLayout>
    
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/title_id">
        <ImageView android:background="@drawable/help" android:layout_width="wrap_content" android:layout_height="wrap_content" />
<!--     	<TextView android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:textColor="#ffffffff"
    	    android:text="帮助界面"
    	    android:textSize="40sp"/> -->
    </ScrollView>
</RelativeLayout>


